rev R4 spelling grammar (Ken)

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <h1 class="heading-primary">Thomas Huckell</h1>
         <div class="home-hero__info">
           <p class="text-primary">
-            Robotisist | Mechanical Engineer | Maker
+            Roboticist | Mechanical Engineer | Maker
           </p>
         </div>
         
@@ -152,7 +152,7 @@
               <p class= "about__content-details-para">
                 Outside of work I enjoy being outdoors! I am an avid paddler who enjoys
                 kayaking and stand up paddleboarding. I also have a passion for woodworking
-                , specifically designing and building furnature.
+                , specifically designing and building furniture.
               </p>
             </div>
             <a href="./index.html#contact" class="btn btn--med btn--theme dynamicBgClr"
@@ -205,7 +205,7 @@
               <h3 class="projects__row-content-subtitle">Sept 2019 - April 2022</h3>
               <p class="projects__row-content-desc">
                 During my masters thesis I worked in the Biomechanics x Robotics Lab, which is a member of the 
-                Ingenuity Labs Research Institute at Queen's University. The Institute is an interdisiplinary research 
+                Ingenuity Labs Research Institute at Queen's University. The Institute is an interdisciplinary research 
                 group with focus on AI, robotics and human machine interactions. My research focused 
                 modeling and control of legged robots.
               </p>
@@ -229,11 +229,11 @@
             </div>
             <div class="projects__row-content">
               <h3 class="projects__row-content-title">Dynamic Parameter Identification of CRS A465 Manipulator</h3>
-              <h3 class="projects__row-content-subtitle">Febuary-April 2020</h3>
+              <h3 class="projects__row-content-subtitle">February-April 2020</h3>
               <p class="projects__row-content-desc">
                 In advanced robotic applications an accurate dynamic model is critical for designing
                 control systems, planning operations, process supervision, simulations, and training. The dynamic parameters 
-                were experimentally identified for a CRS manipulator in final the project of a graduate controls course.
+                were experimentally identified for a CRS manipulator in the final project of a graduate controls course.
               </p>
               <a
                 href="./proj_ELEC848.html"
@@ -257,7 +257,7 @@
               <h3 class="projects__row-content-title">Kalman Filter for smartphone IMU</h3>
               <h3 class="projects__row-content-subtitle">Nov - Dec 2019</h3>
               <p class="projects__row-content-desc">
-                In the final project of graduate level course on Energetics & Mechanics of Locomotion a Kalman filter for a smartphone's IMU sensor was
+                In the final project of a graduate level course on Energetics & Mechanics of Locomotion, a Kalman filter for a smartphone's Inertial Measurement Unit (IMU) sensor was
                 designed to make accurate measurements of motion more accessible.
               </p>
               <a
@@ -279,10 +279,10 @@
               />
             </div>
             <div class="projects__row-content">
-              <h3 class="projects__row-content-title">Queen's Mostly Autonmous Sailboat Team</h3>
+              <h3 class="projects__row-content-title">Queen's Mostly Autonomous Sailboat Team</h3>
               <h3 class="projects__row-content-subtitle">Sept 2017 - May 2019</h3>
               <p class="projects__row-content-desc">
-                Queens Mostly Automous Sailboat Team (QMAST) is a student design team that 
+                Queens Mostly Autonomous Sailboat Team (QMAST) is a student design team that 
                 designs and builds autonomous sailboats to compete at the International 
                 Robotic Sailboat Regatta. During my undergraduate degree I was member of 
                 Mechanical Team, starting as a general member, then moving up to the
@@ -312,8 +312,8 @@
               <h3 class="projects__row-content-title">Teaching Experience</h3>
               <h3 class="projects__row-content-subtitle">Sept 2019 - May 2022</h3>
               <p class="projects__row-content-desc">
-                 While at completing my Masters at Queen's univerisity I was Teaching Assistant for 
-                 the mechatronics courses offered by the Mechanical and Materials Enineering department.
+                 While at completing my MASc degree at Queen's university I was Teaching Assistant for 
+                 the mechatronics courses offered by the Mechanical and Materials Engineering department.
                  In this role I taught the theory of electro-mechanical systems in addition
                  to organizing and facilitating labs where the students gain hands on experience programming 
                  microcontrollers and constructing mechatronic systems. 
