--- a/proj_QMAST.html
+++ b/proj_QMAST.html
@@ -90,9 +90,9 @@
             I started working for QMAST as a general member of the mechanical design team where I was trained 
             in a range of rapid prototyping methods such as 3D printing, laser cutting, and CNC milling in addition
             to learning the fabrication process of composite materials.
-            After a year as a general member I was promoted to manager of the mechanical team. In this role I was in 
-            charge of planning, precurement of materials, training and workload delegation. Additionally, as manager
-            of the mechanical team I liased with the electical and software teams to coordinate deadlines and dependecies between teams.
+            After a year as a general member, I was promoted to manager of the mechanical team. In this role I oversaw 
+            planning, procurement of materials, training and workload delegation. Additionally, as manager
+            of the mechanical team I liaised with the electrical and software teams to coordinate deadlines and dependencies between teams.
           </p>
         </div>
       </div>
@@ -111,15 +111,14 @@
             <div class="project-details__desc">
               <h3 class="project-details__content-title">Project Overview</h3>
               <p class="project-details__desc-para">
-                One projects I headed while on QMAST was redesigning the hull. Our goal was to improve the speed of
+                One of the projects I headed while on QMAST was redesigning the hull. Our goal was to improve the speed of
                 the boat through reducing the hulls width and extending the keel length. The process started with designing a CAD model of the hull
-                which was based upon a traditional bulb keel sailboat hull.
-                This model was recreated to make a plug to base mold of the hull from. First,
+                which was based upon a traditional bulb keel sailboat hull. This model was used to create a plug for the hull's mold. First,
                 cross sections of the CAD model were used to generate profiles to cut with a laser cutter. These cut profiles are
                 positioned at the appropriate distances using a support frame with the voids between profiles filled with foam then faired to match the desired contours. The plug was then
                 prepped for a fiberglass layup to create a mold for the hull. The mold was then used to create 
                 the hulls shell which was fabricated with carbon fiber and reinforced with bulkheads for added
-                stuctural support and to mount electro-mechanical systems.
+                structural support and to mount electro-mechanical systems.
               </p>
             </div>
             <div class="project-details__tools-used">
