--- a/proj_MECH816.html
+++ b/proj_MECH816.html
@@ -87,7 +87,7 @@
         <h1 class="heading-primary">Kalman Filter for Smartphone IMU</h1>
         <div class="project-cs-hero__info">
           <p class="text-primary">
-            A Kalman Filter is a useful tool to create a probabilistic way of recursively updating a systems state from noisy measurements using a model of measurement
+            A Kalman Filter is a useful tool to create a probabilistic way of recursively updating a systems state from noisy measurements using a model of the measurement
             process and system dynamics to minimize error. This filtering method was used on a smartphones IMU sensor to 
             develop a way of accurately measuring body movements with the readily available sensors in our smartphones. More accessible methods of measuring body movement will 
             make it easier to record and study high risk tasks for musculoskeletal injuries in remote or developing countries such as <a href ="https://pubmed.ncbi.nlm.nih.gov/15176126/"><u>handloom weavers in West Bengal</u></a>.
@@ -106,7 +106,7 @@
                   alt="Project Image"
                   class="project-details__showcase-img"
                 />
-              <figcaption>Smartphone location for experiment using simple excersize case (left) and recorded raw and filtered Euler angles during simulated hand loom motions. </figcaption>
+              <figcaption>Smartphone location for experiment using simple excercise case (left) and recorded raw and filtered Euler angles during simulated hand loom motions. </figcaption>
             </figure>
           </div>
           <div class="project-details__content-main">
@@ -116,10 +116,10 @@
                 
               </p>
               <p class="project-details__desc-para">
-                Two discrete Kalman filters were designed for accelerometer and magnetometer data to estimate the gravitational acceleration 
+                Two discrete Kalman filters were designed to estimate the gravitational acceleration vector 
                 and magnetic field from external acceleration and magnetic disturbances respectively. The estimated gravitational acceleration 
                 and magnetic field can be used with the Arctangent method to calculate the Euler angles to determine the orientation of the phone. 
-                The designed filter was then validated against a provided data set from XSENS IMU using its raw and processed data. After validation 
+                The designed filter was then validated against a provided data set from Xsens IMU using its raw and processed data. After validation 
                 of the filter was completed, data was acquired using a smartphone attached to the arm and forearm while simulating motions of 
                 using a handloom.
               </p>
@@ -135,9 +135,9 @@
               </div>
     
               <p class="project-details__desc-para">
-                Comparing our filter on the raw XSENS data set I was able to produce Euler angles within an RMS error of [1.25 1.09 1.40] degrees of 
-                the processed data using XSENS proprietary software. With the filter providing accurate measurements the filter was tested on a smartphone's 
-                IMU data. While no ground truth validation of phones measurement was completed, the Kalman filter was able to produce results 
+                Comparing our filter on the raw Xsens data set I was able to produce Euler angles within an Root Mean Square (RMS) error of [1.25 1.09 1.40] degrees of 
+                the processed data using Xsens proprietary software. With the filter providing accurate measurements the filter was tested on a smartphone's 
+                IMU data. While no ground truth validation of the phones measurement was completed, the Kalman filter was able to produce results 
                 that capture key trends of the motion when simulating the operation of a handloom.
               </p>
             </div>
