--- a/proj_TA.html
+++ b/proj_TA.html
@@ -87,9 +87,9 @@
         <h1 class="heading-primary">Teaching Experience</h1>
         <div class="project-cs-hero__info">
           <p class="text-primary">
-            While working as a Teaching Assistant for the mechatronics courses my duties 
-            included teaching the course content in tutorials, grading submitted coursework and running the labs where 
-            students got hands on experience working on hardware. For my teaching in 
+            While completing my MASc degree, I worked as a Teaching Assistant for the mechatronics courses. My duties 
+            included teaching the course contents in tutorials, grading submitted coursework and running the labs where 
+            students got hands on experience working with microcontrollers to constuct and test electro-mechanical systems. For my teaching in 
             the 2020-2021 year I was recognized with the "Dean's Teaching Assistant Award". 
 
           </p>
@@ -111,20 +111,19 @@
               <h3 class="project-details__content-subtitle-title">MECH 217 Measurements for Mechatronics</h3>
               <h1 class="project-details__content-subtitle-sub">Fall 2019, Fall 2020</h1>
               <p class="project-details__desc-para">
-                As TA for MECH 217 I provided students with assistance on how to use mircrocontrollers for the purpose
+                As TA for MECH 217 I provided students with assistance on how to use microcontrollers for the purpose
                 of measurements and analysis. Students learned to identify and quantify measurement objectives in practical 
                 engineering applications; apply statistical analysis, including uncertainty, for interpreting test results. 
                 Specify, select, and apply transducers, acquisition systems, and 2 procedures to measure pressure, strain, 
-                temperature and position using both analog and digital sesnsors.
+                temperature and position using both analog and digital sensors.
               </p>
               <h3 class="project-details__content-subtitle-title">MECH 210 Electronic Circuits and Motors for Mechatronics</h3>
               <h1 class="project-details__content-subtitle-sub">Winter 2020, Winter 2021 (Head TA), Winter 2022 (Head TA)</h1>
               <p class="project-details__desc-para">
-                As TA for MECH 210 I taught circuit analysisis techniques of RLC circuits in tutorial sessions. Theses methods are then used 
+                As TA for MECH 210 I taught circuit analysis techniques of RLC circuits in tutorial sessions. Theses methods are then used 
                 to characterize the behavior of common mechatronic circuits; transformers, diodes, solenoids, DC motors and 
                 actuators. Students are then introduced to transistors, and their switching applications. The theory is then applied in the lab component of 
-                the course which I facilitated, guiding students various methods of DC motor control using microcontrollers and force control
-                of a series elastic actuator. 
+                the course where I instructed students through various methods of DC motor control using microcontrollers as well as force control of a Series Elastic Actuator.
               </p>
               <h3 class="project-details__content-subtitle-title">MECH 310 Digital Systems for Mechatronics</h3>
               <h1 class="project-details__content-subtitle-sub">Fall 2022 (Head TA)</h1>
