added resume link, improved footer styling, and kayaking work experience

--- a/index.html
+++ b/index.html
@@ -86,6 +86,11 @@
     </div>
     <div class="home-hero__socials">
       <div class="home-hero__social">
+        <a href="resume/Resume_Thomas_Huckell.pdf" class="home-hero__social-icon-link">
+          <img src="./assets/png/resume-ico.png" alt="icon" class="home-hero__social-icon" />
+        </a>
+      </div>
+      <div class="home-hero__social">
         <a href="https://www.linkedin.com/in/thomas-huckell-8b1407171/" class="home-hero__social-icon-link">
           <img src="./assets/png/linkedin-ico.png" alt="icon" class="home-hero__social-icon" />
         </a>
@@ -167,7 +172,7 @@
       <h2 class="heading heading-sec heading-sec__mb-bg">
         <span class="heading-sec__main">Projects & Experience</span>
         <span class="heading-sec__sub">
-          Learn more about the projects that I have been working on
+          Learn more about my experience and projects that I have worked on:
         </span>
       </h2>
 
@@ -260,6 +265,25 @@
             <a href="./proj_TA.html" class="btn btn--med btn--theme dynamicBgClr">Learn More</a>
           </div>
         </div>
+
+
+        <div class="projects__row">
+          <div class="projects__row-img-cont">
+            <img src="./assets/png/kayaking.png" alt="Kayaking" class="projects__row-img" loading="lazy" />
+          </div>
+          <div class="projects__row-content">
+            <h3 class="projects__row-content-title">Kayak Guide & Instructor</h3>
+            <h3 class="projects__row-content-subtitle">May 2017 - Feb 2023</h3>
+            <p class="projects__row-content-desc">
+              I am a avid paddler who has worked as a guide and instructor out of Deep Cove Kayak. In this role I teach
+              courses on sea kayaking and stand up paddle boarding as well as lead group tours through Say Nuth Khaw Yum
+              Provincial Park. I am a Paddle Canada
+              certified instructor having Level 1 Instructor and Level 3 Skills certifications in sea kayaking.
+            </p>
+            <a href="./proj_KayakGuide.html" class="btn btn--med btn--theme dynamicBgClr">Learn More</a>
+          </div>
+        </div>
+
       </div>
     </div>
   </section>
@@ -267,23 +291,44 @@
     <div class="main-container">
       <div class="main-footer__upper">
         <div class="main-footer__row main-footer__row-1">
-          <h2 class="heading heading-sm main-footer__heading-sm">
-            <span>Social</span>
-          </h2>
-          <div class="main-footer__social-cont">
-            <a target="_blank" rel="noreferrer" href="https://www.linkedin.com/in/thomas-huckell-8b1407171/">
-              <img class="main-footer__icon" src="./assets/png/linkedin-ico.png" alt="icon" />
-            </a>
-            <a target="_blank" rel="noreferrer" href="https://github.com/ThomasHuckell">
-              <img class="main-footer__icon" src="./assets/png/github-ico.png" alt="icon" />
-            </a>
+
+          <div class="main-footer__row main-footer__row-1__Resume">
+            <h2 class="heading heading-sm main-footer__heading-sm">
+              <span>Resume</span>
+            </h2>
+            <div class="main-footer__resume-cont">
+              <a target="_blank" rel="noreferrer" href="resume/Resume_Thomas_Huckell.pdf">
+                <img class="main-footer__icon" src="./assets/png/resume-ico.png" alt="icon" />
+              </a>
+            </div>
           </div>
+
+          <div class="main-footer__row main-footer__row-1__Socials">
+
+            <h2 class="heading heading-sm main-footer__heading-sm">
+              <span>Socials</span>
+            </h2>
+
+            <div class="main-footer__social-cont">
+              <a target="_blank" rel="noreferrer" href="#">
+                <img class="main-footer__icon" src="./assets/png/linkedin-ico.png" alt="icon" />
+              </a>
+              <a target="_blank" rel="noreferrer" href="#">
+                <img class="main-footer__icon" src="./assets/png/github-ico.png" alt="icon" />
+              </a>
+            </div>
+
+          </div>
+
+
         </div>
+
         <div class="main-footer__row main-footer__row-2" id="contact">
           <h4 class="heading heading-sm text-lt">Thomas Huckell</h4>
           <p class="main-footer__short-desc">
             tom.huckell@gmail.com
           </p>
+
         </div>
       </div>
 
