--- a/proj_TA.html
+++ b/proj_TA.html
@@ -1,190 +1,201 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Teaching Assistance Positions</title>
-    <meta name="description" content="Case study page of Project" />
 
-    <link rel="stylesheet" href="css/style.css" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <title>Teaching Assistance Positions</title>
+  <meta name="description" content="Case study page of Project" />
 
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600;700;900&display=swap"
-      rel="stylesheet"
-    />
-  </head>
-  <body>
-    <header class="header">
-      <div class="header__content">
-        <div class="header__logo-container">
-          <div class="header__logo-img-cont">
-            <img
-              src="./assets/png/TH_transparent_2.png"
-              alt="Ram Maheshwari Logo Image"
-              class="header__logo-img"
-            />
-          </div>
-          <span class="header__logo-sub">Thomas Huckell</span>
+  <link rel="stylesheet" href="css/style.css" />
+
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600;700;900&display=swap"
+    rel="stylesheet" />
+</head>
+
+<body>
+  <header class="header">
+    <div class="header__content">
+      <div class="header__logo-container">
+        <div class="header__logo-img-cont">
+          <img src="./assets/png/TH_transparent_2.png" alt="Ram Maheshwari Logo Image" class="header__logo-img" />
         </div>
-        <div class="header__main">
-          <ul class="header__links">
-            <li class="header__link-wrapper">
-              <a href="./index.html" class="header__link"> Home </a>
-            </li>
-            <li class="header__link-wrapper">
-              <a href="./index.html#about" class="header__link">About </a>
-            </li>
-            <li class="header__link-wrapper">
-              <a href="./index.html#projects" class="header__link">
-                Projects & Experience
-              </a>
-            </li>
-            <li class="header__link-wrapper">
-              <a href="./proj_TA.html#contact" class="header__link"> Contact </a>
-            </li>
-          </ul>
-          <div class="header__main-ham-menu-cont">
-            <img
-              src="./assets/svg/ham-menu.svg"
-              alt="hamburger menu"
-              class="header__main-ham-menu"
-            />
-            <img
-              src="./assets/svg/ham-menu-close.svg"
-              alt="hamburger menu close"
-              class="header__main-ham-menu-close d-none"
-            />
-          </div>
+        <span class="header__logo-sub">Thomas Huckell</span>
+      </div>
+      <div class="header__main">
+        <ul class="header__links">
+          <li class="header__link-wrapper">
+            <a href="./index.html" class="header__link"> Home </a>
+          </li>
+          <li class="header__link-wrapper">
+            <a href="./index.html#about" class="header__link">About </a>
+          </li>
+          <li class="header__link-wrapper">
+            <a href="./index.html#projects" class="header__link">
+              Projects & Experience
+            </a>
+          </li>
+          <li class="header__link-wrapper">
+            <a href="./proj_TA.html#contact" class="header__link"> Contact </a>
+          </li>
+        </ul>
+        <div class="header__main-ham-menu-cont">
+          <img src="./assets/svg/ham-menu.svg" alt="hamburger menu" class="header__main-ham-menu" />
+          <img src="./assets/svg/ham-menu-close.svg" alt="hamburger menu close"
+            class="header__main-ham-menu-close d-none" />
         </div>
       </div>
-      <div class="header__sm-menu">
-        <div class="header__sm-menu-content">
-          <ul class="header__sm-menu-links">
-            <li class="header__sm-menu-link">
-              <a href="./index.html"> Home </a>
-            </li>
+    </div>
+    <div class="header__sm-menu">
+      <div class="header__sm-menu-content">
+        <ul class="header__sm-menu-links">
+          <li class="header__sm-menu-link">
+            <a href="./index.html"> Home </a>
+          </li>
 
-            <li class="header__sm-menu-link">
-              <a href="./index.html#about"> About </a>
-            </li>
+          <li class="header__sm-menu-link">
+            <a href="./index.html#about"> About </a>
+          </li>
 
-            <li class="header__sm-menu-link">
-              <a href="./index.html#projects"> Projects </a>
-            </li>
+          <li class="header__sm-menu-link">
+            <a href="./index.html#projects"> Projects </a>
+          </li>
 
-            <li class="header__sm-menu-link">
-              <a href="./index.html#contact"> Contact </a>
-            </li>
-          </ul>
-        </div>
+          <li class="header__sm-menu-link">
+            <a href="./index.html#contact"> Contact </a>
+          </li>
+        </ul>
       </div>
-    </header>
-    <section class="project-cs-hero">
-      <div class="project-cs-hero__content">
-        <h1 class="heading-primary">Teaching Experience</h1>
-        <div class="project-cs-hero__info">
-          <p class="text-primary">
-            While completing my MASc degree, I worked as a Teaching Assistant for the mechatronics courses. My duties 
-            included teaching the course contents in tutorials, grading submitted coursework and running the labs where 
-            students got hands on experience working with microcontrollers to constuct and test electro-mechanical systems. For my teaching in 
-            the 2020-2021 year I was recognized with the "Dean's Teaching Assistant Award". 
+    </div>
+  </header>
+  <section class="project-cs-hero">
+    <div class="project-cs-hero__content">
+      <h1 class="heading-primary">Teaching Experience</h1>
+      <div class="project-cs-hero__info">
+        <p class="text-primary">
+          While completing my MASc degree, I worked as a Teaching Assistant for the mechatronics courses. My duties
+          included teaching the course contents in tutorials, grading submitted coursework and running the labs where
+          students got hands on experience working with microcontrollers to constuct and test electro-mechanical
+          systems. For my teaching in
+          the 2020-2021 year I was recognized with the "Dean's Teaching Assistant Award".
 
-          </p>
-        </div>
+        </p>
+      </div>
 
-      </div>
-    </section>
-    <section class="project-details">
-      <div class="main-container">
-        <div class="project-details__content">
-          <div class ="project-details__showcase-img-cont">
-            <img 
-              src="./assets/png/mechatronics_lab.png"
-              class="project-details__showcase-img"
-              />
-          </div>
-          <div class="project-details__content-main">
-            <div class="project-details__desc">
-              <h3 class="project-details__content-subtitle-title">MECH 217 Measurements for Mechatronics</h3>
-              <h1 class="project-details__content-subtitle-sub">Fall 2019, Fall 2020</h1>
-              <p class="project-details__desc-para">
-                As TA for MECH 217 I provided students with assistance on how to use microcontrollers for the purpose
-                of measurements and analysis. Students learned to identify and quantify measurement objectives in practical 
-                engineering applications; apply statistical analysis, including uncertainty, for interpreting test results. 
-                Specify, select, and apply transducers, acquisition systems, and 2 procedures to measure pressure, strain, 
-                temperature and position using both analog and digital sensors.
-              </p>
-              <h3 class="project-details__content-subtitle-title">MECH 210 Electronic Circuits and Motors for Mechatronics</h3>
-              <h1 class="project-details__content-subtitle-sub">Winter 2020, Winter 2021 (Head TA), Winter 2022 (Head TA)</h1>
-              <p class="project-details__desc-para">
-                As TA for MECH 210 I taught circuit analysis techniques of RLC circuits in tutorial sessions. Theses methods are then used 
-                to characterize the behavior of common mechatronic circuits; transformers, diodes, solenoids, DC motors and 
-                actuators. Students are then introduced to transistors, and their switching applications. The theory is then applied in the lab component of 
-                the course where I instructed students through various methods of DC motor control using microcontrollers as well as force control of a Series Elastic Actuator.
-              </p>
-              <h3 class="project-details__content-subtitle-title">MECH 310 Digital Systems for Mechatronics</h3>
-              <h1 class="project-details__content-subtitle-sub">Fall 2022 (Head TA)</h1>
-              <p class="project-details__desc-para">
-                As TA for MECH 310 I cover and review course material in tutorial sessions. This covers a wide range of topics including; servo motors, stepper motors PLC control of sequential logic 
-                FFT application for machine health monitoring, industrial communication standards for local and internet-based information transfer.
-                The lab sessions which I administered focused on design, construction, and testing of microcontroller based mechatronic systems such as programming a rapid prototyped 
-                CNC machine to run g-code to draw the Queen's logo.
-              </p>
-            </div>
-            <div class="project-details__tools-used">
-              <h3 class="project-details__content-title">Tools Used</h3>
-              <div class="skills">
-                <div class="skills__skill">Arduino</div>
-                <div class="skills__skill">C++</div>
-                <div class="skills__skill">Python</div>
-                <div class="skills__skill">Data Analysis</div>
-                <div class="skills__skill">Soldering</div>
-                <div class="skills__skill">Ocilliscope</div>
-                <div class="skills__skill">Circuit Design</div>
-              </div>
-            </div>
-          
-          </div>
+    </div>
+  </section>
+  <section class="project-details">
+    <div class="main-container">
+      <div class="project-details__content">
+        <div class="project-details__showcase-img-cont">
+          <img src="./assets/png/mechatronics_lab.png" class="project-details__showcase-img" />
         </div>
-      </div>
-    </section>
-    <footer class="main-footer">
-      <div class="main-container">
-        <div class="main-footer__upper">
-          <div class="main-footer__row main-footer__row-1">
-            <h2 class="heading heading-sm main-footer__heading-sm">
-              <span>Social</span>
-            </h2>
-            <div class="main-footer__social-cont">
-              <a target="_blank" rel="noreferrer" href="#">
-                <img
-                  class="main-footer__icon"
-                  src="./assets/png/linkedin-ico.png"
-                  alt="icon"
-                />
-              </a>
-              <a target="_blank" rel="noreferrer" href="#">
-                <img
-                  class="main-footer__icon"
-                  src="./assets/png/github-ico.png"
-                  alt="icon"
-                />
-              </a>
-            </div>
-          </div>
-          <div class="main-footer__row main-footer__row-2" id="contact">
-            <h4 class="heading heading-sm text-lt">Thomas Huckell</h4>
-            <p class="main-footer__short-desc">
-              tom.huckell@gmail.com
+        <div class="project-details__content-main">
+          <div class="project-details__desc">
+            <h3 class="project-details__content-subtitle-title">MECH 217 Measurements for Mechatronics</h3>
+            <h1 class="project-details__content-subtitle-sub">Fall 2019, Fall 2020</h1>
+            <p class="project-details__desc-para">
+              As TA for MECH 217 I provided students with assistance on how to use microcontrollers for the purpose
+              of measurements and analysis. Students learned to identify and quantify measurement objectives in
+              practical
+              engineering applications; apply statistical analysis, including uncertainty, for interpreting test
+              results.
+              Specify, select, and apply transducers, acquisition systems, and 2 procedures to measure pressure, strain,
+              temperature and position using both analog and digital sensors.
+            </p>
+            <h3 class="project-details__content-subtitle-title">MECH 210 Electronic Circuits and Motors for Mechatronics
+            </h3>
+            <h1 class="project-details__content-subtitle-sub">Winter 2020, Winter 2021 (Head TA), Winter 2022 (Head TA)
+            </h1>
+            <p class="project-details__desc-para">
+              As TA for MECH 210 I taught circuit analysis techniques of RLC circuits in tutorial sessions. Theses
+              methods are then used
+              to characterize the behavior of common mechatronic circuits; transformers, diodes, solenoids, DC motors
+              and
+              actuators. Students are then introduced to transistors, and their switching applications. The theory is
+              then applied in the lab component of
+              the course where I instructed students through various methods of DC motor control using microcontrollers
+              as well as force control of a Series Elastic Actuator.
+            </p>
+            <h3 class="project-details__content-subtitle-title">MECH 310 Digital Systems for Mechatronics</h3>
+            <h1 class="project-details__content-subtitle-sub">Fall 2022 (Head TA)</h1>
+            <p class="project-details__desc-para">
+              As TA for MECH 310 I cover and review course material in tutorial sessions. This covers a wide range of
+              topics including; servo motors, stepper motors PLC control of sequential logic
+              FFT application for machine health monitoring, industrial communication standards for local and
+              internet-based information transfer.
+              The lab sessions which I administered focused on design, construction, and testing of microcontroller
+              based mechatronic systems such as programming a rapid prototyped
+              CNC machine to run g-code to draw the Queen's logo.
             </p>
           </div>
+          <div class="project-details__tools-used">
+            <h3 class="project-details__content-title">Tools Used</h3>
+            <div class="skills">
+              <div class="skills__skill">Arduino</div>
+              <div class="skills__skill">C++</div>
+              <div class="skills__skill">Python</div>
+              <div class="skills__skill">Data Analysis</div>
+              <div class="skills__skill">Soldering</div>
+              <div class="skills__skill">Ocilliscope</div>
+              <div class="skills__skill">Circuit Design</div>
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </div>
+  </section>
+  <footer class="main-footer">
+    <div class="main-container">
+      <div class="main-footer__upper">
+        <div class="main-footer__row main-footer__row-1">
+
+          <div class="main-footer__row main-footer__row-1__Resume">
+            <h2 class="heading heading-sm main-footer__heading-sm">
+              <span>Resume</span>
+            </h2>
+            <div class="main-footer__resume-cont">
+              <a target="_blank" rel="noreferrer" href="resume/Resume_Thomas_Huckell.pdf">
+                <img class="main-footer__icon" src="./assets/png/resume-ico.png" alt="icon" />
+              </a>
+            </div>
+          </div>
+
+          <div class="main-footer__row main-footer__row-1__Socials">
+
+            <h2 class="heading heading-sm main-footer__heading-sm">
+              <span>Socials</span>
+            </h2>
+
+            <div class="main-footer__social-cont">
+              <a target="_blank" rel="noreferrer" href="#">
+                <img class="main-footer__icon" src="./assets/png/linkedin-ico.png" alt="icon" />
+              </a>
+              <a target="_blank" rel="noreferrer" href="#">
+                <img class="main-footer__icon" src="./assets/png/github-ico.png" alt="icon" />
+              </a>
+            </div>
+
+          </div>
+
+
         </div>
 
+        <div class="main-footer__row main-footer__row-2" id="contact">
+          <h4 class="heading heading-sm text-lt">Thomas Huckell</h4>
+          <p class="main-footer__short-desc">
+            tom.huckell@gmail.com
+          </p>
+        </div>
       </div>
-    </footer>
-    <script src="./index.js"></script>
-  </body>
+
+    </div>
+  </footer>
+  <script src="./index.js"></script>
+</body>
+
 </html>
