--- a/proj_ELEC848.html
+++ b/proj_ELEC848.html
@@ -1,219 +1,213 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Parameter Identification</title>
-    <meta name="description" content="Case study page of Project" />
 
-    <link rel="stylesheet" href="css/style.css" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <title>Parameter Identification</title>
+  <meta name="description" content="Case study page of Project" />
 
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600;700;900&display=swap"
-      rel="stylesheet"
-    />
-  </head>
-  <body>
-    <header class="header">
-      <div class="header__content">
-        <div class="header__logo-container">
-          <div class="header__logo-img-cont">
-            <img
-              src="./assets/png/TH_transparent_2.png"
-              alt="Ram Maheshwari Logo Image"
-              class="header__logo-img"
-            />
-          </div>
-          <span class="header__logo-sub">Thomas Huckell</span>
+  <link rel="stylesheet" href="css/style.css" />
+
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600;700;900&display=swap"
+    rel="stylesheet" />
+</head>
+
+<body>
+  <header class="header">
+    <div class="header__content">
+      <div class="header__logo-container">
+        <div class="header__logo-img-cont">
+          <img src="./assets/png/TH_transparent_2.png" alt="Ram Maheshwari Logo Image" class="header__logo-img" />
         </div>
-        <div class="header__main">
-          <ul class="header__links">
-            <li class="header__link-wrapper">
-              <a href="./index.html" class="header__link"> Home </a>
-            </li>
-            <li class="header__link-wrapper">
-              <a href="./index.html#about" class="header__link">About </a>
-            </li>
-            <li class="header__link-wrapper">
-              <a href="./index.html#projects" class="header__link">
-                Projects & Experience
+        <span class="header__logo-sub">Thomas Huckell</span>
+      </div>
+      <div class="header__main">
+        <ul class="header__links">
+          <li class="header__link-wrapper">
+            <a href="./index.html" class="header__link"> Home </a>
+          </li>
+          <li class="header__link-wrapper">
+            <a href="./index.html#about" class="header__link">About </a>
+          </li>
+          <li class="header__link-wrapper">
+            <a href="./index.html#projects" class="header__link">
+              Projects & Experience
+            </a>
+          </li>
+          <li class="header__link-wrapper">
+            <a href="./proj_ELEC848.html#contact" class="header__link"> Contact </a>
+          </li>
+        </ul>
+        <div class="header__main-ham-menu-cont">
+          <img src="./assets/svg/ham-menu.svg" alt="hamburger menu" class="header__main-ham-menu" />
+          <img src="./assets/svg/ham-menu-close.svg" alt="hamburger menu close"
+            class="header__main-ham-menu-close d-none" />
+        </div>
+      </div>
+    </div>
+    <div class="header__sm-menu">
+      <div class="header__sm-menu-content">
+        <ul class="header__sm-menu-links">
+          <li class="header__sm-menu-link">
+            <a href="./index.html"> Home </a>
+          </li>
+
+          <li class="header__sm-menu-link">
+            <a href="./index.html#about"> About </a>
+          </li>
+
+          <li class="header__sm-menu-link">
+            <a href="./index.html#projects"> Projects </a>
+          </li>
+
+          <li class="header__sm-menu-link">
+            <a href="./proj_ELEC848.html#contact"> Contact </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </header>
+  <section class="project-cs-hero">
+    <div class="project-cs-hero__content">
+      <h1 class="heading-primary">Parameter Identification of CRS A465 Manipulator</h1>
+      <div class="project-cs-hero__info">
+        <p class="text-primary">
+          Robotic manipulators require an accurate dynamic model of the system for effective control system design,
+          and for accurate planning, simulation and training. The model's parameters such as link mass, inertia,
+          and frictional properties are not always provided in technical manuals or accurate to the individual robot.
+          Experimental identification is used to accurately estimate these values which consists of robot
+          modeling, trajectory generation, data acquisition, signal processing, parameter estimation and model
+          validation.
+          In the final project for ELEC 848, a graduate controls course, this process was carried out for the CRS A465
+          manipulator
+          to build an accurate dynamic model.
+        </p>
+      </div>
+
+    </div>
+  </section>
+  <section class="project-details">
+    <div class="main-container">
+      <div class="project-details__content">
+        <div class="project-details__showcase-img-cont">
+          <figure>
+            <div class="flex-container">
+              <img src="./assets/gif/CRS_traj.gif" alt="Project Image" class="inner-image-vsmall" />
+              <img src="./assets/png/test5-ww.png" alt="Project Image" class="inner-image" />
+            </div>
+            <figcaption>CRS A465 running a programmed trajectory designed to excite dynamic characteristics.
+            </figcaption>
+          </figure>
+        </div>
+        <div class="project-details__content-main">
+          <div class="project-details__desc">
+            <h3 class="project-details__content-title">Project Overview</h3>
+            <p class="project-details__desc-para">
+
+            </p>
+            <p class="project-details__desc-para">
+              The dynamic model was formulated using the Euler-Lagrange Equations. This expression is
+              nonlinear in terms of the dynamic parameters, so it was reformulated into a reduced canonical form
+              that is linear to model parameters.
+            </p>
+            <div class="project-details__med-img-cont">
+              <img class="project-details__med-img" src="./assets/png/ELEC848_step1.png" />
+            </div>
+            <p class="project-details__desc-para">
+              With dynamics in this form one can apply least square regression to
+              estimate these dynamic parameters.
+            </p>
+            <div class="project-details__small-img-cont">
+              <img class="project-details__small-img" src="./assets/png/ELEC848_step2.png" />
+            </div>
+            <p class="project-details__desc-para">
+              A joint trajectory was generated such that all the
+              identifiable parameters are continuously excited. With this trajectory three training data sets were
+              recorded
+              and the noisy joint acceleration data was processed with a gaussian filter. A least square regression was
+              performed all three data sets to estimate the dynamic parameters.
+            </p>
+            <div class="project-details__small-img-cont">
+              <figure>
+                <img src="./assets/png/VoltageEstWithFric.png" class="project-details__small-img" />
+                <figcaption>Comparison of estimated voltage from dynamic parameters and measured voltage of CRS
+                  manipulator</figcaption>
+              </figure>
+            </div>
+            <p class="project-details__desc-para">
+              To validate the model, the average of the estimated dynamic parameters from two of the three training data
+              sets was used to estimate the measured voltage of
+              the third data set. With this dynamic model, the average RMS error between the predicted voltage and
+              measured voltage was 0.088 Volts.
+            </p>
+          </div>
+          <div class="project-details__tools-used">
+            <h3 class="project-details__content-title">Tools Used</h3>
+            <div class="skills">
+              <div class="skills__skill">Lagrangian Dynamics</div>
+              <div class="skills__skill">MATLAB</div>
+              <div class="skills__skill">Data Analysis</div>
+              <div class="skills__skill">Control</div>
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </div>
+  </section>
+  <footer class="main-footer">
+    <div class="main-container">
+      <div class="main-footer__upper">
+        <div class="main-footer__row main-footer__row-1">
+
+          <div class="main-footer__row main-footer__row-1__Resume">
+            <h2 class="heading heading-sm main-footer__heading-sm">
+              <span>Resume</span>
+            </h2>
+            <div class="main-footer__resume-cont">
+              <a target="_blank" rel="noreferrer" href="resume/Resume_Thomas_Huckell.pdf">
+                <img class="main-footer__icon" src="./assets/png/resume-ico.png" alt="icon" />
               </a>
-            </li>
-            <li class="header__link-wrapper">
-              <a href="./proj_ELEC848.html#contact" class="header__link"> Contact </a>
-            </li>
-          </ul>
-          <div class="header__main-ham-menu-cont">
-            <img
-              src="./assets/svg/ham-menu.svg"
-              alt="hamburger menu"
-              class="header__main-ham-menu"
-            />
-            <img
-              src="./assets/svg/ham-menu-close.svg"
-              alt="hamburger menu close"
-              class="header__main-ham-menu-close d-none"
-            />
+            </div>
           </div>
+
+          <div class="main-footer__row main-footer__row-1__Socials">
+
+            <h2 class="heading heading-sm main-footer__heading-sm">
+              <span>Socials</span>
+            </h2>
+
+            <div class="main-footer__social-cont">
+              <a target="_blank" rel="noreferrer" href="#">
+                <img class="main-footer__icon" src="./assets/png/linkedin-ico.png" alt="icon" />
+              </a>
+              <a target="_blank" rel="noreferrer" href="#">
+                <img class="main-footer__icon" src="./assets/png/github-ico.png" alt="icon" />
+              </a>
+            </div>
+
+          </div>
+
+
         </div>
-      </div>
-      <div class="header__sm-menu">
-        <div class="header__sm-menu-content">
-          <ul class="header__sm-menu-links">
-            <li class="header__sm-menu-link">
-              <a href="./index.html"> Home </a>
-            </li>
 
-            <li class="header__sm-menu-link">
-              <a href="./index.html#about"> About </a>
-            </li>
-
-            <li class="header__sm-menu-link">
-              <a href="./index.html#projects"> Projects </a>
-            </li>
-
-            <li class="header__sm-menu-link">
-              <a href="./proj_ELEC848.html#contact"> Contact </a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </header>
-    <section class="project-cs-hero">
-      <div class="project-cs-hero__content">
-        <h1 class="heading-primary">Parameter Identification of CRS A465 Manipulator</h1>
-        <div class="project-cs-hero__info">
-          <p class="text-primary">
-            Robotic manipulators require an accurate dynamic model of the system for effective control system design, 
-            and for accurate planning, simulation and training. The model's parameters such as link mass, inertia, 
-            and frictional properties are not always provided in technical manuals or accurate to the individual robot. 
-            Experimental identification is used to accurately estimate these values which consists of robot 
-            modeling, trajectory generation, data acquisition, signal processing, parameter estimation and model validation. 
-            In the final project for ELEC 848, a graduate controls course, this process was carried out for the CRS A465 manipulator
-            to build an accurate dynamic model.
+        <div class="main-footer__row main-footer__row-2">
+          <h4 class="heading heading-sm text-lt">Thomas Huckell</h4>
+          <p class="main-footer__short-desc">
+            tom.huckell@gmail.com
           </p>
         </div>
 
-      </div>
-    </section>
-    <section class="project-details">
-      <div class="main-container">
-        <div class="project-details__content">
-          <div class ="project-details__showcase-img-cont">
-            <figure>
-              <div class="flex-container">
-                <img
-                  src="./assets/gif/CRS_traj.gif"
-                  alt="Project Image"
-                  class="inner-image-vsmall"
-                />
-                <img 
-                  src="./assets/png/test5-ww.png"
-                  alt="Project Image"
-                  class="inner-image"
-                />
-              </div>
-              <figcaption>CRS A465 running a programmed trajectory designed to excite dynamic characteristics.</figcaption>
-            </figure>
-          </div>
-          <div class="project-details__content-main">
-            <div class="project-details__desc">
-              <h3 class="project-details__content-title">Project Overview</h3>
-              <p class="project-details__desc-para">
-                
-              </p>
-              <p class="project-details__desc-para">
-                The dynamic model was formulated using the Euler-Lagrange Equations. This expression is 
-                nonlinear in terms of the dynamic parameters, so it was reformulated into a reduced canonical form 
-                that is linear to model parameters.
-              </p>
-              <div class="project-details__med-img-cont">
-                <img 
-                  class="project-details__med-img"
-                  src="./assets/png/ELEC848_step1.png"
-                />
-              </div>
-              <p class="project-details__desc-para">
-                With dynamics in this form one can apply least square regression to
-                estimate these dynamic parameters.
-              </p>
-                <div class="project-details__small-img-cont">
-                  <img 
-                    class="project-details__small-img"
-                    src="./assets/png/ELEC848_step2.png"
-                  />
-                </div>
-                <p class="project-details__desc-para">
-                A joint trajectory was generated such that all the 
-                identifiable parameters are continuously excited. With this trajectory three training data sets were recorded 
-                and the noisy joint acceleration data was processed with a gaussian filter. A least square regression was
-                performed all three data sets to estimate the dynamic parameters.
-              </p>
-              <div class="project-details__small-img-cont">
-                <figure>
-                  <img 
-                  src="./assets/png/VoltageEstWithFric.png"
-                  class="project-details__small-img"
-                  />
-                  <figcaption>Comparison of estimated voltage from dynamic parameters and measured voltage of CRS manipulator</figcaption>
-                </figure>
-              </div>
-              <p class="project-details__desc-para">
-                To validate the model, the average of the estimated dynamic parameters from two of the three training data sets was used to estimate the measured voltage of 
-                the third data set. With this dynamic model, the average RMS error between the predicted voltage and measured voltage was 0.088 Volts.
-              </p>
-            </div>
-            <div class="project-details__tools-used">
-              <h3 class="project-details__content-title">Tools Used</h3>
-              <div class="skills">
-                <div class="skills__skill">Lagrangian Dynamics</div>
-                <div class="skills__skill">MATLAB</div>
-                <div class="skills__skill">Data Analysis</div>
-                <div class="skills__skill">Control</div>
-              </div>
-            </div>
-          
-          </div>
-        </div>
-      </div>
-    </section>
-    <footer class="main-footer">
-      <div class="main-container">
-        <div class="main-footer__upper">
-          <div class="main-footer__row main-footer__row-1">
-            <h2 class="heading heading-sm main-footer__heading-sm">
-              <span>Social</span>
-            </h2>
-            <div class="main-footer__social-cont">
-              <a target="_blank" rel="noreferrer" href="#">
-                <img
-                  class="main-footer__icon"
-                  src="./assets/png/linkedin-ico.png"
-                  alt="icon"
-                />
-              </a>
-              <a target="_blank" rel="noreferrer" href="#">
-                <img
-                  class="main-footer__icon"
-                  src="./assets/png/github-ico.png"
-                  alt="icon"
-                />
-              </a>
-            </div>
-          </div>
-          <div class="main-footer__row main-footer__row-2">
-            <h4 class="heading heading-sm text-lt">Thomas Huckell</h4>
-            <p class="main-footer__short-desc">
-              tom.huckell@gmail.com
-            </p>
-          </div>
-        </div>
 
       </div>
-    </footer>
-    <script src="./index.js"></script>
-  </body>
+
+    </div>
+  </footer>
+  <script src="./index.js"></script>
+</body>
+
 </html>
