--- a/proj_QMAST.html
+++ b/proj_QMAST.html
@@ -1,175 +1,178 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>QMAST</title>
-    <meta name="description" content="Case study page of Project" />
 
-    <link rel="stylesheet" href="css/style.css" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <title>QMAST</title>
+  <meta name="description" content="Case study page of Project" />
 
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600;700;900&display=swap"
-      rel="stylesheet"
-    />
-  </head>
-  <body>
-    <header class="header">
-      <div class="header__content">
-        <div class="header__logo-container">
-          <div class="header__logo-img-cont">
-            <img
-              src="./assets/png/TH_transparent_2.png"
-              alt="Ram Maheshwari Logo Image"
-              class="header__logo-img"
-            />
-          </div>
-          <span class="header__logo-sub">Thomas Huckell</span>
+  <link rel="stylesheet" href="css/style.css" />
+
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600;700;900&display=swap"
+    rel="stylesheet" />
+</head>
+
+<body>
+  <header class="header">
+    <div class="header__content">
+      <div class="header__logo-container">
+        <div class="header__logo-img-cont">
+          <img src="./assets/png/TH_transparent_2.png" alt="Ram Maheshwari Logo Image" class="header__logo-img" />
         </div>
-        <div class="header__main">
-          <ul class="header__links">
-            <li class="header__link-wrapper">
-              <a href="./index.html" class="header__link"> Home </a>
-            </li>
-            <li class="header__link-wrapper">
-              <a href="./index.html#about" class="header__link">About </a>
-            </li>
-            <li class="header__link-wrapper">
-              <a href="./index.html#projects" class="header__link">
-                Projects & Experience
+        <span class="header__logo-sub">Thomas Huckell</span>
+      </div>
+      <div class="header__main">
+        <ul class="header__links">
+          <li class="header__link-wrapper">
+            <a href="./index.html" class="header__link"> Home </a>
+          </li>
+          <li class="header__link-wrapper">
+            <a href="./index.html#about" class="header__link">About </a>
+          </li>
+          <li class="header__link-wrapper">
+            <a href="./index.html#projects" class="header__link">
+              Projects & Experience
+            </a>
+          </li>
+          <li class="header__link-wrapper">
+            <a href="./proj_QMAST.html#contact" class="header__link"> Contact </a>
+          </li>
+        </ul>
+        <div class="header__main-ham-menu-cont">
+          <img src="./assets/svg/ham-menu.svg" alt="hamburger menu" class="header__main-ham-menu" />
+          <img src="./assets/svg/ham-menu-close.svg" alt="hamburger menu close"
+            class="header__main-ham-menu-close d-none" />
+        </div>
+      </div>
+    </div>
+    <div class="header__sm-menu">
+      <div class="header__sm-menu-content">
+        <ul class="header__sm-menu-links">
+          <li class="header__sm-menu-link">
+            <a href="./index.html"> Home </a>
+          </li>
+
+          <li class="header__sm-menu-link">
+            <a href="./index.html#about"> About </a>
+          </li>
+
+          <li class="header__sm-menu-link">
+            <a href="./index.html#projects"> Projects & Experience </a>
+          </li>
+
+          <li class="header__sm-menu-link">
+            <a href="./proj_QMAST.html#contact"> Contact </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </header>
+  <section class="project-cs-hero">
+    <div class="project-cs-hero__content">
+      <h1 class="heading-primary">QMAST</h1>
+      <div class="project-cs-hero__info">
+        <p class="text-primary">
+          I started working for QMAST as a general member of the mechanical design team where I was trained
+          in a range of rapid prototyping methods such as 3D printing, laser cutting, and CNC milling in addition
+          to learning the fabrication process of composite materials.
+          After a year as a general member, I was promoted to manager of the mechanical team. In this role I oversaw
+          planning, procurement of materials, training and workload delegation. Additionally, as manager
+          of the mechanical team I liaised with the electrical and software teams to coordinate deadlines and
+          dependencies between teams.
+        </p>
+      </div>
+    </div>
+  </section>
+  <section class="project-details">
+    <div class="main-container">
+      <div class="project-details__content">
+        <div class="project-details__showcase-img-cont">
+          <img src="./assets/png/HullProgression.png" alt="Project Image" class="project-details__showcase-img" />
+        </div>
+        <div class="project-details__content-main">
+          <div class="project-details__desc">
+            <h3 class="project-details__content-title">Project Overview</h3>
+            <p class="project-details__desc-para">
+              One of the projects I headed while on QMAST was redesigning the hull. Our goal was to improve the speed of
+              the boat through reducing the hulls width and extending the keel length. The process started with
+              designing a CAD model of the hull
+              which was based upon a traditional bulb keel sailboat hull. This model was used to create a plug for the
+              hull's mold. First,
+              cross sections of the CAD model were used to generate profiles to cut with a laser cutter. These cut
+              profiles are
+              positioned at the appropriate distances using a support frame with the voids between profiles filled with
+              foam then faired to match the desired contours. The plug was then
+              prepped for a fiberglass layup to create a mold for the hull. The mold was then used to create
+              the hulls shell which was fabricated with carbon fiber and reinforced with bulkheads for added
+              structural support and to mount electro-mechanical systems.
+            </p>
+          </div>
+          <div class="project-details__tools-used">
+            <h3 class="project-details__content-title">Tools Used</h3>
+            <div class="skills">
+              <div class="skills__skill">CAD</div>
+              <div class="skills__skill">Project Management</div>
+              <div class="skills__skill">Composite Fabrication</div>
+              <div class="skills__skill">3D Printing</div>
+              <div class="skills__skill">Laser Cutting</div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <footer class="main-footer">
+    <div class="main-container">
+      <div class="main-footer__upper">
+        <div class="main-footer__row main-footer__row-1">
+
+          <div class="main-footer__row main-footer__row-1__Resume">
+            <h2 class="heading heading-sm main-footer__heading-sm">
+              <span>Resume</span>
+            </h2>
+            <div class="main-footer__resume-cont">
+              <a target="_blank" rel="noreferrer" href="resume/Resume_Thomas_Huckell.pdf">
+                <img class="main-footer__icon" src="./assets/png/resume-ico.png" alt="icon" />
               </a>
-            </li>
-            <li class="header__link-wrapper">
-              <a href="./proj_QMAST.html#contact" class="header__link"> Contact </a>
-            </li>
-          </ul>
-          <div class="header__main-ham-menu-cont">
-            <img
-              src="./assets/svg/ham-menu.svg"
-              alt="hamburger menu"
-              class="header__main-ham-menu"
-            />
-            <img
-              src="./assets/svg/ham-menu-close.svg"
-              alt="hamburger menu close"
-              class="header__main-ham-menu-close d-none"
-            />
+            </div>
           </div>
+
+          <div class="main-footer__row main-footer__row-1__Socials">
+
+            <h2 class="heading heading-sm main-footer__heading-sm">
+              <span>Socials</span>
+            </h2>
+
+            <div class="main-footer__social-cont">
+              <a target="_blank" rel="noreferrer" href="#">
+                <img class="main-footer__icon" src="./assets/png/linkedin-ico.png" alt="icon" />
+              </a>
+              <a target="_blank" rel="noreferrer" href="#">
+                <img class="main-footer__icon" src="./assets/png/github-ico.png" alt="icon" />
+              </a>
+            </div>
+
+          </div>
+
+
         </div>
-      </div>
-      <div class="header__sm-menu">
-        <div class="header__sm-menu-content">
-          <ul class="header__sm-menu-links">
-            <li class="header__sm-menu-link">
-              <a href="./index.html"> Home </a>
-            </li>
 
-            <li class="header__sm-menu-link">
-              <a href="./index.html#about"> About </a>
-            </li>
-
-            <li class="header__sm-menu-link">
-              <a href="./index.html#projects"> Projects & Experience </a>
-            </li>
-
-            <li class="header__sm-menu-link">
-              <a href="./proj_QMAST.html#contact"> Contact </a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </header>
-    <section class="project-cs-hero">
-      <div class="project-cs-hero__content">
-        <h1 class="heading-primary">QMAST</h1>
-        <div class="project-cs-hero__info">
-          <p class="text-primary">
-            I started working for QMAST as a general member of the mechanical design team where I was trained 
-            in a range of rapid prototyping methods such as 3D printing, laser cutting, and CNC milling in addition
-            to learning the fabrication process of composite materials.
-            After a year as a general member, I was promoted to manager of the mechanical team. In this role I oversaw 
-            planning, procurement of materials, training and workload delegation. Additionally, as manager
-            of the mechanical team I liaised with the electrical and software teams to coordinate deadlines and dependencies between teams.
+        <div class="main-footer__row main-footer__row-2" id="contact">
+          <h4 class="heading heading-sm text-lt">Thomas Huckell</h4>
+          <p class="main-footer__short-desc">
+            tom.huckell@gmail.com
           </p>
         </div>
       </div>
-    </section>
-    <section class="project-details">
-      <div class="main-container">
-        <div class="project-details__content">
-          <div class="project-details__showcase-img-cont">
-            <img
-              src="./assets/png/HullProgression.png"
-              alt="Project Image"
-              class="project-details__showcase-img"
-            />
-          </div>
-          <div class="project-details__content-main">
-            <div class="project-details__desc">
-              <h3 class="project-details__content-title">Project Overview</h3>
-              <p class="project-details__desc-para">
-                One of the projects I headed while on QMAST was redesigning the hull. Our goal was to improve the speed of
-                the boat through reducing the hulls width and extending the keel length. The process started with designing a CAD model of the hull
-                which was based upon a traditional bulb keel sailboat hull. This model was used to create a plug for the hull's mold. First,
-                cross sections of the CAD model were used to generate profiles to cut with a laser cutter. These cut profiles are
-                positioned at the appropriate distances using a support frame with the voids between profiles filled with foam then faired to match the desired contours. The plug was then
-                prepped for a fiberglass layup to create a mold for the hull. The mold was then used to create 
-                the hulls shell which was fabricated with carbon fiber and reinforced with bulkheads for added
-                structural support and to mount electro-mechanical systems.
-              </p>
-            </div>
-            <div class="project-details__tools-used">
-              <h3 class="project-details__content-title">Tools Used</h3>
-              <div class="skills">
-                <div class="skills__skill">CAD</div>
-                <div class="skills__skill">Project Management</div>
-                <div class="skills__skill">Composite Fabrication</div>
-                <div class="skills__skill">3D Printing</div>
-                <div class="skills__skill">Laser Cutting</div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <footer class="main-footer">
-      <div class="main-container">
-        <div class="main-footer__upper">
-          <div class="main-footer__row main-footer__row-1">
-            <h2 class="heading heading-sm main-footer__heading-sm">
-              <span>Social</span>
-            </h2>
-            <div class="main-footer__social-cont">
-              <a target="_blank" rel="noreferrer" href="#">
-                <img
-                  class="main-footer__icon"
-                  src="./assets/png/linkedin-ico.png"
-                  alt="icon"
-                />
-              </a>
-              <a target="_blank" rel="noreferrer" href="#">
-                <img
-                  class="main-footer__icon"
-                  src="./assets/png/github-ico.png"
-                  alt="icon"
-                />
-              </a>
-            </div>
-          </div>
-          <div class="main-footer__row main-footer__row-2" id = "contact">
-            <h4 class="heading heading-sm text-lt">Thomas Huckell</h4>
-            <p class="main-footer__short-desc">
-              tom.huckell@gmail.com
-            </p>
-          </div>
-        </div>
 
-       
-      </div>
-    </footer>
-    <script src="./index.js"></script>
-  </body>
+
+    </div>
+  </footer>
+  <script src="./index.js"></script>
+</body>
+
 </html>
