kayak guide edits & mobile styling

--- a/index.html
+++ b/index.html
@@ -275,10 +275,10 @@
             <h3 class="projects__row-content-title">Kayak Guide & Instructor</h3>
             <h3 class="projects__row-content-subtitle">May 2017 - Feb 2023</h3>
             <p class="projects__row-content-desc">
-              I am a avid paddler who has worked as a guide and instructor out of Deep Cove Kayak. In this role I teach
+              I am an avid paddler who has worked as a guide and instructor out of Deep Cove Kayak. In this role I teach
               courses on sea kayaking and stand up paddle boarding as well as lead group tours through Say Nuth Khaw Yum
               Provincial Park. I am a Paddle Canada
-              certified instructor having Level 1 Instructor and Level 3 Skills certifications in sea kayaking.
+              certified instructor with Level 1 Instructor and Level 3 Skills certifications in sea kayaking.
             </p>
             <a href="./proj_KayakGuide.html" class="btn btn--med btn--theme dynamicBgClr">Learn More</a>
           </div>
