--- a/proj_KayakGuide.html
+++ b/proj_KayakGuide.html
@@ -93,22 +93,23 @@
                     <div class="project-details__desc">
 
                         <p class="project-details__desc-para">
-                            While working as a kayak guide and instructor I was able to develop leadership and teaching
+                            While working as a kayak guide and instructor I developed leadership and teaching
                             skills through instructing clients on paddling fundamentals in a range of paddling courses.
-                            Additionally, as a senior guide I help with training and mentoring new staff on how to run
+                            Additionally, as a senior guide I helped with training and mentoring new staff on how to run
                             the tours and lessons that Deep Cove Kayak offers.
                         </p>
 
                         <p class="project-details__desc-para">
                             When running large group tours and overnight school trips I often work with a team of guides
-                            to manage the group, making sure all the clients are together, safe and having a enjoyable
-                            experience. To maintain this requires teamwork and communication with the other guides as
-                            well as strong incident management and risk assessment when dealing with hazards of coastal
-                            environments.
+                            to manage the group, making sure all the clients are together, safe and having an enjoyable
+                            experience. To maintain this, it requires teamwork and communication with the other guides.
+                            Furthermore, when working in coastal environments I have gained strong incident management
+                            and risk
+                            skills.
                         </p>
 
                         <p class="project-details__desc-para">
-                            It has been very rewarding being able to share my passion of paddling and the outdoors to
+                            It has been very rewarding being able to share my passion of paddling and the outdoors with
                             others. I am always looking forward to getting out on the water and explore.
                         </p>
                     </div>
